# logngine

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.py  make.bat  pyproject.toml
datasets/data/fluids/water/: saturation-table.svuv
datasets/data/thermo/water/: compressed-table.svuv  superheated-table.svuv
datasets/specifications/: svuv_specification.md  units_specification.md
datasets/validation/templates/: saturation-table.schema.json
logngine/core/calculus/: DerivativeRegistry.py
logngine/core/uncertainty/: DistributionBase.py  NormalDistribution.py  TrivialDistribution.py  UncertaintyFormatter.py
specifications/: svuv_specification.md
src/cpp/: CMakeLists.txt
src/cpp/bindings/: py_core.cpp  py_data.cpp  py_materials.cpp  py_thermo.cpp  py_uncertainty.cpp  py_units.cpp
src/cpp/core/: RSTTree.cpp  hello.cpp
src/cpp/data/: hello.cpp
src/cpp/include/logngine/core/: RSTTree.h  hello.h
src/cpp/include/logngine/data/: Citations.h  hello.h
src/cpp/include/logngine/data/thermo/: State.cpp  State.h
src/cpp/include/logngine/data/thermo/water/: CompressedTable.h  SaturationTable.h  SuperheatedTable.h
src/cpp/include/logngine/materials/: hello.h
src/cpp/include/logngine/thermo/: hello.h
src/cpp/include/logngine/uncertainty/: hello.h
src/cpp/include/logngine/units/: hello.h
src/cpp/materials/: hello.cpp
src/cpp/thermo/: hello.cpp
src/cpp/uncertainty/: hello.cpp
src/cpp/units/: hello.cpp
src/data/fluids/water/: saturation-table.svuv
src/logngine/: __init__.py
src/logngine/core/: __init__.py
src/logngine/data/: __init__.py
src/logngine/data/thermo/water/: CompressedTable.csv  SaturationTable.csv  SuperheatedTable.csv
src/logngine/materials/: __init__.py
src/logngine/solver/: Bundle.py  Coupling.py  Relation.py  SolverEngine.py  SolverOption.py  State.py  exceptions.py  solutiondecorators.py
src/logngine/thermo/: __init__.py
src/logngine/thermo/table/: ThermodynamicTable.py
src/logngine/uncertainty/: __init__.py
src/logngine/units/: __init__.py
src/validation/templates/: saturation-table.schema.json
src/validation/units/: amount.units  angle.units  area.units  capacitance.units  charge.units  conductance.units  current.units  energy.units  force.units  illuminance.units  inductance.units  length.units  luminous_flux.units  luminous_intensity.units  magnetic_flux.units  magnetic_flux_density.units  mass.units  pressure.units  pressure_stress.units  resistance.units  solid_angle.units  speed.units  temperature.units  time.units  voltage.units  volume.units
tests/: test_build.py  test_svuv_parser.py
tools/: DatasetBaker.py  SVUVParser.py  SourceBaker.py  SourceWriter.py  __init__.py  exceptions.py
