[build-system]
requires = ["scikit-build-core>=0.8", "pybind11", "setuptools_scm"]
build-backend = "scikit_build_core.build"

[project]
name = "logngine"
dynamic = ["version"]           # derived from git tag via setuptools-scm
description = "Engineering Toolbox for myself, primarily."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Logan Dapp", email = "logan@logand.app"}]
license = {file = "LICENSE"}
dependencies = [
    'pint'
]

[tool.scikit-build]
cmake.version = ">=3.27"
minimum-version = "0.8"
wheel.packages = ["src/logngine"]
sdist.include = [
    "src",
    "CMakeLists.txt",
    "README.md",
    "LICENSE",
    "src/data",
    "src/validation"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0"
]